ChangeLog for herdstat

2005-05-25 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_handler.hh: Added devaway_T instance to
	action_herds_xml_handler_T base class.  Display little key if a dev
	displayed is in the devaway list in flush().
	* src/devaway.cc, src/devaway.hh: Inherit straight from std::map
	instead of having it as a member.
	* src/formatter.cc, src/formatter.hh: Added support for highlighting
	developers who are in the devaway list.
	* src/action_dev_handler.cc, src/action_herd_handler.cc,
	src/action_stats_handler.cc: Added devaway_T support, so that
	formatter_T will mark devs who occur in output who are in the devaway
	list.

2005-05-24 Aaron Walker <ka0ttic@gentoo.org>

	* src/parsable.hh: Added new base class for parsable things.
	* src/xml.hh: Inherit from parsable_T.
	* src/devaway.cc, src/devaway.hh: Added new devaway_T class that
	represents a devaway list.
	* src/herdstat.cc, src/action_away_handler.cc,
	src/action_away_handler.hh: Added new action handler for --away.
	* bashcomp, doc/herdstat.1.in: Added --away.

2005-05-19 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac, lib/Makefile.am, src/Makefile.am: set LIBTOOL in
	configure.in and AC_SUBST rather than setting it in each Makefile.am.

2005-05-18 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0 final).

2005-05-17 Aaron Walker <ka0ttic@gentoo.org>

	* src/Makefile.am, lib/Makefile.am: Use libtool --silent.
	* lib/string.hh: Added string::substr() as Glib::ustring::substr()
	returns a Glib::ustring.
	* src/formatter.cc: util::string instantiation is no longer needed
	when calling util::string::split() now that substr returns a
	util::string.
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: display()
	argument need not be non-const.

2005-05-16 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Explicitly call PKG_PROG_PKG_CONFIG.  Gentoo bug
	92788.

2005-05-15 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0_rc6).
