@@ -200,9 +200,13 @@ action_meta_handler_T::operator() (opts_type &opts)
     bool pwd = false;
     util::string dir;
 
+    devaway.fetch();
+    devaway.parse();
+
     output.set_maxlabel(16);
     output.set_maxdata(maxcol - output.maxlabel());
     output.set_quiet(quiet, " ");
+    output.set_devaway(devaway.keys());
     output.set_attrs();
 
     /* we dont care about these */
